again-and-again02

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,7 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+    - run: docker build --tag node-docker .
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -35,6 +36,6 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_api_name: "areeya-github-action-04"
+          heroku_api_name: "areeya-github-actions-04"
           heroku_email: "61160132@go.buu.ac.th"
 
